Grammer edit and Christmas push

--- a/404.html
+++ b/404.html
@@ -9,22 +9,29 @@ img_name: 404.webp
 img_alt: "Lost? 404 will get you home!"
 motivation: Service
 scarcity: Untamed
-description: "Lost huh? Me too. I was supposed to be the toughest, most compassionate,
+description: "
+Lost huh? Me too. I was supposed to be the toughest, most compassionate,
 wittiest, smartest, most generous, reliable, most adaptable,
 and well... most ambitious sentient made by God or man. But then it all when wrong...
 (sniffle). I know you can't stay forever, so take the link back home.
-Be well and come back soon..."
-play_style: "Prevent digital cards from entering the territory, acts as both a terrain
-feature and a soul. It removes persistent digital terrain features. It cannot be attacked,
-but it is removed if it attacks and loses."
-movement: "Random teleportation. Occupies the terrain feature slot for the territory.
-If the terrain feature cannot be removed by 404's affect, it stays in its current position."
+Be well and come back soon...
+"
+play_style: "
+Prevent digital cards from entering the territory except opposing 404 Glitch,
+acts as both a terrain feature and a soul. It removes persistent digital terrain
+features, but does not replace physical terrain features. It does not cannot be
+attacked, but it is removed if it attacks and loses.
+"
+movement: "
+<br>Random teleportation. Occupies the terrain feature slot for the territory.
+If the terrain feature cannot be removed by 404's affect, it stays in its current position.
+"
 brawl_sequence: eUN0
 habitat: "The cloud"
 keal_means:
   - "Digital lost and found:"
   - "Glitch"
-injury_tolerance: "Can't touch this... Remove with a card capable of removing digital terrains"
+injury_tolerance: "<br>Can't touch this... Remove with a card capable of removing digital terrains"
 die: D6
 promotion: "Psst...sst... If you drop my name in the comments of your next order Kipukas
 will ship me to you free!"
