--- a/_posts/2021-10-11-avian_keepers_den.html
+++ b/_posts/2021-10-11-avian_keepers_den.html
@@ -3,14 +3,14 @@ layout: territory
 permalink: /avian_keepers_den/
 redirect_from: /TlVv
 img_name: avian_keepers_den.webp
-img_alt: "A palace floats amoung the skies where flying rays swirl about"
+img_alt: "A palace floats among the skies where flying rays swirl about"
 tags: float stone creature gate sky
 variation: "Terrain Feature"
 title: "Avian Keeper's Den"
 
 play_style: "Acts as a prison for non-avian creatures. In order to imprison a soul,
 they must have only 1 injury before defeat and be in a territory touching the
-territory this feature is within. In order to take the prisoner, you must engaguge the
+territory this feature is within. In order to take the prisoner, you must engage the
 enemy soul in a keal means bout with a card whose archetypal gene is avian.
 The card will be kept in prison until the territory is captured by the opposing player.
 Set the card aside out of play while imprisoned."
