--- a/_posts/2021-10-11-branwen_mantillusion_practitioner.html
+++ b/_posts/2021-10-11-branwen_mantillusion_practitioner.html
@@ -3,7 +3,7 @@ layout: char_spcs
 permalink: /branwen_mantillusion_practitioner/
 title: "Branwen: Mantillusion Practitioner"
 redirect_from: /IR2B
-tags: praying_mantis manits illusion mirror
+tags: praying_mantis mantis illusion mirror
 variation: "Character"
 genetic_disposition: Telekinetic
 motivation: Service
