--- a/_posts/2021-10-11-hilbert_king_of_avian_frogs.html
+++ b/_posts/2021-10-11-hilbert_king_of_avian_frogs.html
@@ -8,7 +8,7 @@ variation: "Character"
 genetic_disposition: Avian
 motivation: Passion
 img_name: hilbert_king_of_avian_frogs.webp
-img_alt: "Majistic looking frog with wings perched on a branch stareing at you intently"
+img_alt: "Majestic looking frog with wings perched on a branch staring at you intently"
 scarcity: "Founder's Deck"
 description: "Hilbert started life out as any other avian frog; living it up in
 the tree tops among the bogs of their small remote kipuka. He rose to the
