--- a/_posts/2021-10-11-liliel_healing_fairy.html
+++ b/_posts/2021-10-11-liliel_healing_fairy.html
@@ -20,7 +20,7 @@ into bringing her talents to the front lines of the war for the first kipuka. Th
 she worked as a field medic, attempting to keep both the natural-born and the created alive through
 brutal fighting. She carries a blunt edged sword intended to push her foes far enough
 away to escape via flight. She tries to kill only when threatened with emanate death."
-play_style: "She can treat keal means damage (including her own) while in play, unless medical satchel takes keal means damage"
+play_style: "She can treat 1 keal means damage every other diel cycle while in play."
 brawl_sequence: "H8wj"
 keal_means:
   - "Blunt Defensive Sword:"
