--- a/_posts/2021-10-11-mihela_cleanser_of_fields.html
+++ b/_posts/2021-10-11-mihela_cleanser_of_fields.html
@@ -26,7 +26,7 @@ greater eccentricity that honored the death that surrounded her. Some began to
 call her the mistress of death."
 play_style: "Wastes souls when she engages them if they are downed."
 brawl_sequence: "pVLu"
-keal_meanss:
+keal_means:
   - "Thwarting Dagger:"
   - "Brutal-Cenozoic"
   - "Some Grave's Crown:"
