--- a/_posts/2021-10-11-palace_of_the_allel_sect.html
+++ b/_posts/2021-10-11-palace_of_the_allel_sect.html
@@ -4,7 +4,7 @@ permalink: /palace_of_the_allele_sect/
 redirect_from: /ioqs
 img_name: palace_of_the_allele_sect.webp
 variation: "Terrain Feature"
-img_alt: "Explorer gazing upon an almost icicle like palace nestled in a vally
+img_alt: "Explorer gazing upon an almost icicle like palace nestled in a valley
 with a lake."
 tags: mountain nomad lake palace
 title: "Palace of the Allele Sect"
