--- a/_posts/2021-10-11-shards_desert.html
+++ b/_posts/2021-10-11-shards_desert.html
@@ -6,7 +6,7 @@ img_name: shards_desert.webp
 img_alt: "Expansive desert with flying mystery creature and floating stones"
 tags: desert float stones arch
 variation: "Terrain Feature"
-title: "Shard's desert"
+title: "Shard's Desert"
 play_style: "The heavy atmosphere applies a crushing effect to all souls
 that enter the territory space. Cost: 1 keal means damage per turn, awarded a the
 start of the turn. Territory holder is able to hide objects that can never be found
