--- a/_posts/2021-10-12-parched_traveler.html
+++ b/_posts/2021-10-12-parched_traveler.html
@@ -12,7 +12,7 @@ img_alt: "A man died, but like a chicken kept walking their path even after deat
 scarcity: "Founder's Deck"
 description: "After traveling the sand ruins created by weapons of mass destruction,
 researchers theorized that one would surly die if they attempted to cross by foot
-alone. They then developed a huminoid form as close to death as possible. It requires
+alone. They then developed a humanoid form as close to death as possible. It requires
 almost no water nor food and endures heat incredibly well. While it looks like
 a man, this species is not intelligent nor is it sentient. In fact, it can't even breed.
 It was designed to take simple commands well. They are used as a scare tactic in
