--- a/_posts/2021-10-19-feeding_the_piffions.html
+++ b/_posts/2021-10-19-feeding_the_piffions.html
@@ -14,13 +14,13 @@ criteria: "<b>Activation:</b> Activates when a territory is attacked. <br>
 
 activation: "Allows player to move one soul to an adjacent territory before the
 attack is launched without rolling to escape."
-dectection: "Impossible"
+detection: "Impossible"
 
 description: "Piffions were the product of a comical experiment, paying homage to
 the works of an ancient genealogist known as Charles Darwin. Where Darwin bred
 fancy pigeons, the creator's of these beauties wanted to prove the feasibility of
 the griffin form. Unfortunately, the experiment did not work as planned, and an early
 batch incapable of flight escaped into the city. Piffions are now as common there as pigeons
-are in most cities. Throwing fragrent seed is enough to summon a horde and create a good distraction."
+are in most cities. Throwing fragrant seed is enough to summon a horde and create a good distraction."
 scarcity: "Founder's Deck"
 ---
