--- a/_posts/2021-10-19-passage_among_maples.html
+++ b/_posts/2021-10-19-passage_among_maples.html
@@ -8,7 +8,7 @@ tags: boat lake swamp marsh trees maples arch
 variation: "Terrain Feature"
 title: "Passage Among Maples"
 play_style: "Extends the movement range of souls that start in this territory by 1.
-During the night, while you control the territory this card is afixed to,
+During the night, while you control the territory this card is affixed to,
 instead of your normal hand refresh, you may add one honey card to your hand
 from either players discard or your deck.
 Reshuffle your deck if you take this action."
