--- a/_posts/2021-11-19-freezing_of_the_heart.html
+++ b/_posts/2021-11-19-freezing_of_the_heart.html
@@ -4,7 +4,7 @@ permalink: /freezing_of_the_heart/
 redirect_from: /SmCK
 img_name: freezing_of_the_heart.webp
 img_alt: "Beautiful lady carving a heart"
-tags: ice heart woman sculpt carve frozen atlantas
+tags: ice heart woman sculpt carve frozen Atlantis
 variation: "Trap"
 title: "Freezing of the Heart"
 
@@ -13,7 +13,7 @@ criteria: "<b>Activation:</b> D20: 3, 4, 5, 6 <br>
 
 activation: "You can place, from your hand out of turn, a soul with an Endothermic
 archetypal gene in the same territory as this card."
-dectection: "Your opponent can place, from your hand out of turn, a soul with an Endothermic
+detection: "Your opponent can place, from your hand out of turn, a soul with an Endothermic
 archetypal gene in the same territory as this card."
 
 description: "Svetlana is the heiress to a great and ancient fortune from a family
