--- a/_posts/2021-11-19-sboi_threat_plus_plus.html
+++ b/_posts/2021-11-19-sboi_threat_plus_plus.html
@@ -8,7 +8,7 @@ variation: "Species"
 genetic_disposition: Energetic
 motivation: Possessor
 img_name: sboi_threat_plus_plus.webp
-img_alt: "Awsome destruction!!!"
+img_alt: "Awesome destruction!!!"
 scarcity: "Founder's Deck"
 description: "Born from a Russian deep learning algorithm that became trapped in
 its target's neural network, Sboi are not to be trifled with."
