--- a/_posts/2021-11-19-to_catch_a_spirit.html
+++ b/_posts/2021-11-19-to_catch_a_spirit.html
@@ -18,7 +18,7 @@ free bottle card soul. Once exchanged, the freed card must be played by the
 conditions listed on the card this turn, else, the exchange fails and both cards are wasted. If you successfully exchange,
 the original bottle card is restored, then the other card becomes the new bottle card.
 Once activated, this card is kept in play until removed by the effect of another card. Neither player controls this card."
-dectection: "Same as activation"
+detection: "Same as activation"
 
 description: "Watch out for this thingy's bottle. It will rip out, then trap
 any soul it desires. Open for negotiations, of course."
