--- a/_posts/2022-06-07-artificer_of_the_salt_chancel.html
+++ b/_posts/2022-06-07-artificer_of_the_salt_chancel.html
@@ -8,7 +8,7 @@ variation: "Species"
 genetic_disposition: Entropic
 motivation: Sacrifice
 img_name: artificer_of_the_salt_chancel.webp
-img_alt: "Four armed sea dog magistically floating above water"
+img_alt: "Four armed sea dog majestically floating above water"
 scarcity: "Founder's Deck"
 description: "
 The artificer of the salt chancel is no longer a person, through they remember
