--- a/_posts/2023-03-13-frost_tipped_artic_otter.html
+++ b/_posts/2023-03-13-frost_tipped_artic_otter.html
@@ -3,7 +3,7 @@ layout: char_spcs
 permalink: /frost_tipped_arctic_otter/
 title: "Frost Tipped Arctic Otter"
 redirect_from: /nqTG
-tags: otter frost snow ice artic cold stream
+tags: otter frost snow ice arctic cold stream
 variation: "Species"
 genetic_disposition: Endothermic
 motivation: Survival
