--- a/_posts/2023-03-13-sprite_of_wilds_spirit.html
+++ b/_posts/2023-03-13-sprite_of_wilds_spirit.html
@@ -11,7 +11,7 @@ img_name: sprite_of_wilds_spirit.webp
 img_alt: "A golden bell, BA addition"
 scarcity: "Founder's Deck"
 description: "Many times good intentions go awry. These creatures measuring about
-2 ft or 60 cm from toe to wing top were created as sentient pollinators for cultivating
+2 ft or 60 cm from toe to wing were created as sentient pollinators for cultivating
 the berries from the regina bacarum plant. These bear berries, which have become
 highly prized for their sweet flavor and acclaimed aphrodisiac properties. This
 demand along with agricultural difficulties called for the development of the highly
@@ -31,7 +31,7 @@ So much as a noticed glance, may recon you for a fight."
 play_style: "<b>Without bear:</b><br>
 This is the default form of this card.
 You may change to this form anytime. If this card changes forms, it cannot move
-the in the same turn of the form change.
+the in the same turn as the form change.
 <br>
 <b>With bear:</b><br>
 May only change to this form by capturing a bear in the following geographies: <br>
@@ -39,7 +39,7 @@ Forest: roll 1, 2, or 3 with D6<br>
 Mountain or Plains: roll 1 or 2 with D6<br>
 Add the number 4 to the list of successful rolls if a stream, river, or creek touches
 the territory.<br>
-If this card changes forms, it cannot move the in the same turn of the form change."
+If this card changes forms, it cannot move the in the same turn as the form change."
 
 
 
