--- a/_posts/2023-03-13-sticks.html
+++ b/_posts/2023-03-13-sticks.html
@@ -5,7 +5,7 @@ permalink: /sticks/
 redirect_from: /jSYU
 img_name: sticks.webp
 img_alt: "Sticks ordered in a circle, big foot maybe?"
-tags: stick sticks pile circle black white grayscale
+tags: stick sticks pile circle black white gray
 title: Sticks
 play_style: "Add one to attack roll."
 description: "Hit with it. By the way, if it seems dumb that a particular card is
