--- a/_posts/2023-03-13-string.html
+++ b/_posts/2023-03-13-string.html
@@ -5,9 +5,9 @@ permalink: /string/
 redirect_from: /Lbap
 img_name: string.webp
 img_alt: "thread the needle, needle, needle needle, pop art"
-tags: string thread cord rope needle warhal
+tags: string thread cord rope needle Warhal
 title: "String"
-play_style: "Requires equiping two string cards to a soul to use effect:<br><br>
+play_style: "Requires equipping two string cards to a soul to use effect:<br><br>
 If you beat your opponent in a keal means bout, then instead of taking damage the
 soul can't move or attack until a friendly soul moves into the same territory and
 cuts them out."
