--- a/_posts/2023-04-03-timebattle.html
+++ b/_posts/2023-04-03-timebattle.html
@@ -22,7 +22,7 @@ by the effect of another card. Your opponent's capital moves to this location an
 becomes cursed with the following effect: <br>
 <br>
 All cards within the territory can only be used every other turn"
-dectection: "This card is placed on the bottom of your opponents deck."
+detection: "This card is placed on the bottom of your opponents deck."
 
 description: "The days grew long and the king looked longingly out into a city, once grand,
 now in dismay. His pride goaded him into challenging an enemy he knew, in his heart,
