--- a/_posts/2023-09-05-balanced_inline_processing_colony.html
+++ b/_posts/2023-09-05-balanced_inline_processing_colony.html
@@ -11,15 +11,15 @@ img_name: balanced_inline_processing_colony.webp
 img_alt: "Colorful brick segments abstractly forming the shape of a computer chip"
 scarcity: "Founder's Deck"
 description: "
-Biochemists, tasked by a group of decendents in Indochina, designed
-a bactrium capable of transmitting electric signals around the cell wall to their colony
+Biochemists, tasked by a group of descendants in Indochina, designed
+a bacterium capable of transmitting electric signals around the cell wall to their colony
 through the cell's pilus (hair-like appendages). These were then coxed into bacterial arrays
 capable of enduring higher currents. All of this was with the intent of producing full-fledged
 micro-processors capable of storing data without the use of any metal in order to smuggle secrets
-into communist China. The first itteration of the project, though prohibitively expensive, proved successful
-without the governments determining foul play. The agents responcible for delivering the devices
+into communist China. The first iteration of the project, though prohibitively expensive, proved successful
+without the governments determining foul play. The agents responsible for delivering the devices
 proved to be the weak point of the process. Many got caught, due to repeat travel, while others
-were incapable maintaining the conditions sufficient for the chip's survivial. Due to the touchy nature
+were incapable maintaining the conditions sufficient for the chip's survival. Due to the touchy nature
 of the chip's survival, data was never captured and the project lived on. Some wonder if these colonies
 are capable of self awareness.
 "
@@ -27,7 +27,7 @@ play_style: "
 Requires being equipped to a carrier card to move. Any territory Balanced Inline Processing
 Colony is in adds 1 and 2 to the successful sabotage die roll for sabotage targeting that territory.
 If this card is removed by force from its carrier it becomes wasted. It can only survive without a carrier
-in your capital where it can use the security systems and cryotec to defend and perserve itself.
+in your capital where it can use the security systems and cryotec to defend and preserve itself.
 "
 brawl_sequence: "Hh2Y"
 habitat: "Digital Cloud"
