--- a/_posts/2023-09-05-location_of_the_deep_apothecary_shop.html
+++ b/_posts/2023-09-05-location_of_the_deep_apothecary_shop.html
@@ -11,7 +11,7 @@ scarcity: "Founder's Deck"
 play_style: "
 Purchase, from your deck, any item while you control an uncontested base camp in a forest habitat
 territory. To purchase pull the item you want from your deck, then put two cards from your hand into the
-deck and have your opponent shuffel.
+deck and have your opponent shuffle.
 "
 description: "
 'I know a little place you can get that' says the woodland sprite. 'Only the initiated
