--- a/_posts/2023-09-05-spectral_lands_decree_and_hearing.html
+++ b/_posts/2023-09-05-spectral_lands_decree_and_hearing.html
@@ -1,14 +1,14 @@
 ---
 layout: sabotage
 permalink: /spectral_lands_decree_and_hearing/
-title: "Spectral Lands Decree and Hearing"
+title: "Spectral Land's Decree and Hearing"
 redirect_from: /dVxr
 tags: black white abstract cave spirit king subject
 variation: "Sabotage"
 img_name: spectral_lands_decree_and_hearing.webp
 
-img_alt: "black and white abstract which looks different in diffentent orientations
-currently it looks as if two figures are present on subjegated to the other"
+img_alt: "black and white abstract which looks different in different orientations
+currently it looks as if two figures are present on subjugated to the other"
 
 scarcity: "Founder's Deck"
 
@@ -22,11 +22,11 @@ failure: "The spectral lands side with your opponent. Your opponent chooses 2
 territories that can't be taken in the next 2 turns."
 
 description: "
-The solom court is held. The perpetrator knows of the wrong they are accused of and knows
+The solemn court is held. The perpetrator knows of the wrong they are accused of and knows
 the conviction of there heart. This is not a court of people, this is a court of a king.
 The subject feels the weight and power of the king rock from side, to side as they decern
 with perfect judgement the fate of the accused. 'I hold the high seat, tasked to protect these lands.
-I feel the spirit of all those who tred upon me. Your guilt is not a question, but your omision stands as such.
-So tell me, what crimes agaist this kingdom will you admit to?'
+I feel the spirit of all those who tread upon me. Your guilt is not a question, but your omission stands as such.
+So tell me, what crimes against this kingdom will you admit to?'
 "
 ---
