--- a/_posts/2023-09-05-suspended_animation.html
+++ b/_posts/2023-09-05-suspended_animation.html
@@ -13,9 +13,9 @@ Every 5 diel cycles you can suspend all actions in a territory for the turn. Thi
 both players, and neither player can move in or out of the territory.
 "
 description: "
-Not to mearly freeze a solid in place or capture it for a moment in time, but to
+Not to merely freeze a solid in place or capture it for a moment in time, but to
 trick matter into believing it can be both. The simultaneity captured in the phase transformation
-perpetuated for more than a fleeting instance. The escence of peace, an anti-entropy,
+perpetuated for more than a fleeting instance. The essence of peace, an anti-entropy,
 where the system no longer feels imperfect in its own energy state. Is such possibility
 where we live or could it be a choice. To accept the wholeness of ourselves and be
 as we are now. Where our rigor says no, our spirit pleads yes.
