--- a/_posts/2023-09-05-what_do_you_see_in_the_breach.html
+++ b/_posts/2023-09-05-what_do_you_see_in_the_breach.html
@@ -3,12 +3,12 @@ layout: sabotage
 permalink: /what_do_you_see_in_the_breach/
 title: "What Do You See in the Breach"
 redirect_from: /dxc9
-tags: african head light bulb zulu mosiac all seeing eye color
+tags: African head light bulb zulu mosaic all seeing eye color
 variation: "Sabotage"
 img_name: what_do_you_see_in_the_breach.webp
 
-img_alt: "I could tell you what I see, but that is just my interpertation of this
-abstract piece. I don't want my interpertation to color your experiance as this seems
+img_alt: "I could tell you what I see, but that is just my interpretation of this
+abstract piece. I don't want my interpretation to color your experience as this seems
 to be the opposite of what the artist intended."
 
 scarcity: "Founder's Deck"
