--- a/_posts/2021-11-19-honey.html
+++ b/_posts/2021-11-19-honey.html
@@ -4,7 +4,7 @@ variation: "Item"
 permalink: /honey/
 redirect_from: /ro1A
 img_name: honey.webp
-img_alt: "Inticing pot of honey"
+img_alt: "Enticing pot of honey"
 tags: honey pot bee news
 title: "Honey"
 play_style: "Yum! Recover one keal mean in diel cycles if played alone, or
