--- a/_posts/2022-06-07-plane_table_joker.html
+++ b/_posts/2022-06-07-plane_table_joker.html
@@ -17,7 +17,8 @@ deals cards from another plane that are said to bind your fate, yet only he can 
 play_style: "
 Once introduced to the kipuka take your opponent's hand and combine it with your
 hand then shuffle. Lay all six cards face down. Take a card, then let your opponent
-take a card and repeat until you and your opponent have a full hand. Play the cards as your own.
+take a card and repeat until you and your opponent have the same number of cards 
+you each began the turn holding. Play the cards as your own.
 "
 brawl_sequence: hLwQ
 keal_means:
