--- a/_posts/2023-03-13-pyrostegia_dragon.html
+++ b/_posts/2023-03-13-pyrostegia_dragon.html
@@ -3,7 +3,7 @@ layout: char_spcs
 permalink: /pyrostegia_dragon/
 title: "Pyrostegia Dragon"
 redirect_from: /G8OO
-tags: flower dragon plant fire pyro chinese
+tags: flower dragon plant fire pyro Chinese
 variation: "Species"
 genetic_disposition: Arboreal
 motivation: Spirit
@@ -18,7 +18,7 @@ peace shared by the forest creatures. Should the disturbance go so far as to ari
 the interest of the Spirit of the Pyrostegia Dragon, the forgoers need not worry
 about the rustling of leaves, for the dead fear nothing in the forest."
 play_style: "Roll a D20 to play card. The Pyrostegia Dragon is placed on the map
-space whose number corrisponds to the number rolled if its geography is Forest. Once placed,
+space whose number corresponds to the number rolled if its geography is Forest. Once placed,
 it can move to any forest area instantly as long as there is conflict in the space.
 It cannot move normally. May sacrifice itself to waste all souls in the space."
 brawl_sequence: G8OO
