--- a/_posts/2023-04-03-cartesian_sea.html
+++ b/_posts/2023-04-03-cartesian_sea.html
@@ -14,7 +14,7 @@ criteria: "<b>Activation:</b> Instant <br>
 activation: "This trap does not need to be laid before use. Play after the diel
 die roll, but before either player performs actions for their turn. For this
 roll you can turn night to day, or day to night. It cannot affect a storm roll."
-dectection: "Impossible"
+detection: "Impossible"
 
 description: "The biggest fish in the sea stretches into the time dimension. It
 often jumps to the next day or night to avoid being around conflict."
