--- a/_posts/2023-09-05-knightsoul_of_binding_time.html
+++ b/_posts/2023-09-05-knightsoul_of_binding_time.html
@@ -8,18 +8,18 @@ variation: "Species"
 genetic_disposition: Energetic
 motivation: Duty
 img_name: knightsoul_of_binding_time.webp
-img_alt: "watercolor knight standing resolute infront of a triple infinity"
+img_alt: "watercolor knight standing resolute in front of a triple infinity"
 scarcity: "Founder's Deck"
 description: "
-In search for the revival of the ways of old, a small group of zealots held ferverent
+In search for the revival of the ways of old, a small group of zealots held fervent
 meetings in order to connect with spirits holding the lives they desired. Hundreds of years
 passed with little but enormous ancestral faith to show for their desires, calls, and pleas.
-None lost hope, ardent and steadfast that one day they would stand rewarded. One fridiged night,
-their leader woke from a trancendental, all consuming dream, claiming to have met the one they sought.
+None lost hope, ardent and steadfast that one day they would stand rewarded. One frigged night,
+their leader woke from a transcendental, all consuming dream, claiming to have met the one they sought.
 'A knight covered in blue. Bound by all that has past at the foot, one who sees what has never passed, and encompasses
 all that is now. It came. We have always known of the higher society; now I have seen it.' Many others
 now claim visits from the Knightsoul, and some say it has passed them edicts. While the
-existance of the Knightsoul hasn't been confirmed, the people's passionate belief won't be denied.
+existence of the Knightsoul hasn't been confirmed, the people's passionate belief won't be denied.
 "
 play_style: "
 Roll a D20 and obtain 10 or above to call to the field. Stays on the field for 2 diel cycles
