Add QR Functionality

--- a/_posts/2021-10-19-passage_among_maples.html
+++ b/_posts/2021-10-19-passage_among_maples.html
@@ -10,7 +10,7 @@ title: "Passage Among Maples"
 play_style: "Extends the movement range of souls that start in this territory by 1.
 During the night, while you control the territory this card is affixed to,
 instead of your normal hand refresh, you may add one honey card to your hand
-from either players discard or your deck.
+from either player's discard or your deck.
 Reshuffle your deck if you take this action."
 description: "The passage through the maples is a ceremony held once every three
 years to symbolize the renewal of the life cycle of the bees. The culture responsible
