--- a/sections/about.html
+++ b/sections/about.html
@@ -9,7 +9,7 @@ bg-terra: "bg-hero-pattern "
 ---
 {% include header.html %}
 <div class="flex place-content-center w-screen h-fit">
-  <div class="z-10 grid grid-cols-1  bg-amber-50 ring ring-kip-drk-goldenrod text-kip-drk-goldenrod text-justify leading-loose px-10 w-5/6 h-fit min-h-screen scroll-smooth">
+  <div class="z-10 grid grid-cols-1  bg-amber-50 outline outline-kip-drk-goldenrod text-kip-drk-goldenrod text-justify leading-loose px-10 w-5/6 h-fit min-h-screen scroll-smooth">
 
     <p class="z-20 text-2xl relative text-kip-drk-goldenrod top-0 md:text-4xl py-5 place-self-center">About the Binder</p>
 
@@ -24,7 +24,7 @@ bg-terra: "bg-hero-pattern "
     <ul class="z-20 w-5/6 md:w-3/6 place-self-center py-5">
       <li class="py-2 italic">Card art presents in full focus: no ugly text boxes to get in the way</li>
       <li class="py-2 italic">Legibility: no longer are lengthy card mechanics printed in 1pt font</li>
-      <li class="py-2 italic">Updateability: cards will recieve mechanics updates as needed, use your favorites forever!</li>
+      <li class="py-2 italic">Updateability: cards will receive mechanics updates as needed, use your favorites forever!</li>
     </ul>
 
     <p class="z-20 w-5/6 md:4/6 place-self-center">
@@ -33,8 +33,8 @@ bg-terra: "bg-hero-pattern "
       I too became tired of my favorite games moving towards a pay to play mentality.
       Instead, we seek to build out a community of independent players, artists, and game devs
       dedicated to producing the most unique, collaborative board game created to date.
-      So, you have my personal guarentee that kipukas.cards will always be free (as in beer) to access.
-      If there ever comes a time when I personally can't further this project, this sight
+      So, you have my personal guarantee that kipukas.cards will always be free (as in beer) to access.
+      If there ever comes a time when I personally can't further this project, this site
       will be made completely open source. - Luke A. Hayes - Kipukas Founder
     </p>
   </div>
