Add cards, maskable icon, and filter options

--- a/_posts/2021-10-10-oshliath_and_osileth.html
+++ b/_posts/2021-10-10-oshliath_and_osileth.html
@@ -19,7 +19,7 @@ observed. She tends to act reclusive, so it came as a shock to her research team
 when they found the young dragon pup, deemed osileth, hunting alongside oshliath.
 The team believes that the osileth will remain by his mother until his soft
 under belly toughens with maturity."
-play_style: "Must retreat if osileth takes damage."
+play_style: "Must retreat if osileth takes damage. (keal means bout is lost while having chosen Osileth's Scale)"
 brawl_sequence: "KVph"
 habitat: "Mountain Range"
 injury_tolerance: 2
