--- a/_posts/2023-04-03-rooster_calling_of_light.html
+++ b/_posts/2023-04-03-rooster_calling_of_light.html
@@ -10,17 +10,21 @@ motivation: Duty
 img_name: rooster_calling_of_light.webp
 img_alt: "Roosters are world renown as noble, honest, and brave. No bull, eat more cow."
 scarcity: "Founder's Deck"
-description: "Created as a symbolic creature, this rooster calls the sun each morning
+description: "
+Created as a symbolic creature, this rooster calls the sun each morning
 faithfully. Each day, it feeds body and soul by reveling in the light. As the sun
-sleeps, so does the faithful companion until its inevitable rise after the night."
-play_style: "Provided this card is not downed, every other turn you may turn a night
-dial roll to day before any actions are taken in the turn."
+sleeps, so does the faithful companion until its inevitable rise after the night.
+"
+play_style: "
+Provided this card is not downed, every other turn you may turn a night
+dial roll to day before any actions are taken in the turn.
+"
 brawl_sequence: BB5S
 keal_means:
   - "Mass of Plant Matter"
-  - "cellulose"
+  - "Arboreal"
   - "Chemical Buds"
-  - "organic"
+  - "Arboreal-Brutal"
 habitat: mountain
 injury_tolerance: 1
 movement: 1
