--- a/_posts/2023-12-21-entrantress_of_cats.html
+++ b/_posts/2023-12-21-entrantress_of_cats.html
@@ -25,7 +25,7 @@ base camps for 2 days. Add a day if you rolled fish.
 failure: "
 The cats did not mind. They became angry and attacked all the souls in one of your base camps
 chosen at random. (re-roll if roll misses your base camp number)
-They all lose one keal means or are wasted if downed.
+They all lose one keal means, but are not wasted if downed.
 "
 
 description: "
