Transition to x-anchor and hiding elements when off page

--- a/_posts/2021-10-11-branwen_mantillusion_practitioner.html
+++ b/_posts/2021-10-11-branwen_mantillusion_practitioner.html
@@ -25,7 +25,7 @@ keal_means:
   - "Magic"
   - "Branches:"
   - "Telekinetic"
-  - "Tough exoskeleton:"
+  - "Tough Exoskeleton:"
   - "Cenozoic"
 habitat: Forest
 injury_tolerance: 2
