--- a/search.html
+++ b/search.html
@@ -22,7 +22,16 @@ search: search_bar.html
       searchInput: document.getElementById('search-input'),
       resultsContainer: document.getElementById('results-container'),
       json: '/search.json',
-      searchResultTemplate: '<li class="mx-auto my-3"><a class="{{ site.data.templates.btn-center }} h-64" href="{url}"><img class="h-40 w-40" src="{{ site.url }}/assets/thumbnails/{img_name}" alt="{img_alt}"></img>{title}</a></li>',
+      searchResultTemplate:  `
+        <li class="mx-auto my-2.5">
+          <a href="{url}"
+          class="grid grid-cols-1 w-60 h-80 pt-4 my-auto bg-amber-50 active:shadow-inner inline-block active:bg-amber-100 hover:bg-amber-100 shadow-lg font-semibold text-kip-drk-goldenrod rounded" 
+          >
+            <img x-cloak height="240" width="240" src="{{ site.url }}/assets/thumbnails/{img_name}" alt="{img_alt}"></img>
+            <div class="text-center text-wrap">{title}</div>
+          </a>
+        </li>
+       `,
       noResultsText: 'We have not made that one yet, but we take requests all the time! Also, if you make an awsome art piece to go with your idea and we use it, you will get paid!'
     })
 
