--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ search: search_bar_link.html
   {% endfor %}
   }
   " 
-  class="flex flex-wrap md:gap-x-5 content-auto place-content-center">
+  class="flex flex-wrap gap-x-5 content-auto place-content-center">
     {% assign posts = site.posts | sort:"title" %}
     {% for card in posts %}
       <div class="w-60 h-80 my-2.5" x-show="
