Fix clear status modal appearence

--- a/_posts/2022-06-07-artificer_of_the_salt_chancel.html
+++ b/_posts/2022-06-07-artificer_of_the_salt_chancel.html
@@ -11,8 +11,8 @@ img_name: artificer_of_the_salt_chancel.webp
 img_alt: "Four armed sea dog majestically floating above water"
 scarcity: "Founder's Deck"
 description: "
-The artificer of the salt chancel is no longer a person, through they remember
-when a past when it was so. They begin their end by sailing as explorers, tradesmen,
+The artificer of the salt chancel is no longer a person, through they remember 
+a past when it was so. They begin their end by sailing as explorers, tradesmen,
 or pilgrims. All who travel by sea may become the artificer if they find the misfortune
 to cross the chancel's path. No individual knows the role of the chancel, except
 for the artificer. Once the chancel meets people upon the seas, all who are unworthy of its purpose
