--- a/_posts/2023-09-05-balanced_inline_processing_colony.html
+++ b/_posts/2023-09-05-balanced_inline_processing_colony.html
@@ -27,11 +27,12 @@ play_style: "
 Requires being equipped to a carrier card to move. Any territory Balanced Inline Processing
 Colony is in adds 1 and 2 to the successful sabotage die roll for sabotage targeting that territory.
 If this card is removed by force from its carrier it becomes wasted. It can only survive without a carrier
-in your capital where it can use the security systems and cryotec to defend and preserve itself.
+in your capital where it can use the security systems and cryotec to defend and preserve itself. Its keal means
+tolerance becomes 1 and it gains Security Hacking keal means in the capital.
 "
 brawl_sequence: "Hh2Y"
 habitat: "DigitalCloud"
-injury_tolerance: 0 ( 1 in capital )
+injury_tolerance: 0
 movement: 0
 keal_means:
 - "(in capital) Security Hacking:"
