Add recipe lookup

--- a/sections/privacy_policy.html
+++ b/sections/privacy_policy.html
@@ -2,7 +2,7 @@
 layout: default
 permalink: /privacy_policy
 title: "Privacy Policy"
-description: "In short, we don't collect data and have no use to."
+description: "In short, we don't collect data and have no use to. Collect data that is..."
 bg-terra: "bg-hero-pattern "
 ---
 {% include side_header.html 
@@ -18,12 +18,12 @@ bg-terra: "bg-hero-pattern "
       install_pwa=true
       base_fill='fill-kip-goldenrod'
       base_stroke='stroke-kip-goldenrod'
-      background_color='bg-emerald-50/80'
+      background_color='bg-slate-100/80'
     %}
     <h1 class="text-3xl font-bold text-left my-4">Zero-Data Collection Privacy Policy</h1>
     <h3 class="text-xl"><span class="font-bold">Effective Date:</span> April, 2024</h3>
-    <p>At our website, we are dedicated to preserving your privacy. We understand the importance of trust and transparency when it comes to handling your personal information. From here on Feature refers to our QR Scanner. <strong>If you must explicitly accept the privacy policy to use the feature.</strong></p>
-    {% assign para_class =  'text-2xl font-bold mt-6 mb-4 text-left z-40' %}
+    <p>At our website, we are dedicated to preserving your privacy. We understand the importance of trust and transparency when it comes to handling your personal information. From here on Feature refers to our QR Scanner. <strong>You must explicitly accept the privacy policy to use the feature.</strong></p>
+    {% assign para_class =  'text-2xl font-bold mt-6 mb-4 text-left z-20' %}
     <h2 class="{{ para_class }}">No Information Collection</h2>
     <p>When using our Feature, we do not gather any data from your device's camera or any other aspect of your device. The Feature operates without accessing or storing any personal information, allowing you to scan Kipukas QR codes safely and anonymously.</p>
 
