--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ bg-terra: "bg-hero-pattern "
   search=true
   base_fill='fill-kip-goldenrod'
   base_stroke='stroke-kip-goldenrod'
-  background_color='bg-emerald-50/85'
+  background_color='bg-slate-100/80'
 %}
 
 <template x-if="true">
