--- a/sections/about.html
+++ b/sections/about.html
@@ -15,7 +15,7 @@ bg-terra: "bg-hero-pattern "
   install_pwa=true
   base_fill='fill-kip-goldenrod'
   base_stroke='stroke-kip-goldenrod'
-  background_color='bg-emerald-50/80'
+  background_color='bg-slate-100/80'
 %}
 <template x-if="true"> <!-- This fixes the cls issue completely -->
 <div class="flex place-content-center w-screen h-fit">
