--- a/sections/recipes.html
+++ b/sections/recipes.html
@@ -46,18 +46,17 @@ bg-terra: "bg-hero-pattern "
           background_color='bg-slate-100/80'
         %}
         <h1 class="text-3xl font-bold text-left my-4">Recipe Lookup</h1>
-        <p>
-          In Kipukas, you can craft recipes from base items. This page
-          details all the recipes for the first 5 item combinations in the founder's decks.
-          Just select the items that you want to craft and a recipe will appear! We made this 
-          page to showcase the game mechanic, particularly how flexible it behaves. For competition purposes,
-          these recipes will always be valid to use. As the game matures, we plan on giving out recipes 
-          with each order. These will be kept in each player's personal recipe book and they will only
-          be allowed to play recipes from within their books for competitive play.
-        </p>
-        <div class="flex m-4 justify-center h-40">
+        <div class="md:flex md:flex-row md:gap-x-4">
+          <div class="outline outline-kip-drk-goldenrod p-4 pr-20 content-center w-fit h-fit">
+            {% for item in site.data.types.Items %}
+              <div x-data="{ checked: false }" class="flex content-center"><input type="checkbox" class="{{ site.data.templates.checkbox }} place-self-center" :disabled="checkDisabled(items) && !checked" @click="items['{{ item }}'] = !items['{{ item }}'], checked = !checked" :checked="checked" name="items" id="items['{{ item }}']"><label for="items['{{ item }}']">{{ item | capitalize }}</label></div>
+            {% endfor %}
+          </div>
+          <div x-init="$watch( 'items', value => recipe = recipeBook(value) )" class="pt-4 content-center"><p><strong class="text-xl" x-text="recipe[0]"></strong><br><span x-text="recipe[1]"></span></div>
+        </div>
+        <div class="flex flex-wrap m-4 justify-center md:h-40 gap-4">
           {% for item in site.data.types.Items %}
-          <p class="text-7xl content-center" x-transition x-show="items['{{ item }}'] && checkFirst('{{ item }}', items )">+</p>
+            <p class="text-7xl content-center mx-2 hidden lg:block" x-transition x-show="items['{{ item }}'] && checkFirst('{{ item }}', items )">+</p>
             <img x-cloak x-transition width="160" height="160" x-show="items['{{ item }}']" class="rounded outline outline-1 outline-kip-drk-goldenrod"
             srcset="
             /assets/thumbnails/x1/{{item | append: '.webp'}} 1x,
@@ -68,13 +67,17 @@ bg-terra: "bg-hero-pattern "
             " alt="{{ item }}"></img>
           {% endfor %}
         </div>
-        <div class="md:grid md:grid-cols-2">
-          <div class="outline outline-kip-drk-goldenrod p-6 content-center">
-            {% for item in site.data.types.Items %}
-              <div x-data="{ checked: false }"><input type="checkbox" class="{{ site.data.templates.checkbox }}" :disabled="checkDisabled(items) && !checked" @click="items['{{ item }}'] = !items['{{ item }}'], checked = !checked" :checked="checked" name="items" id="items['{{ item }}']"><label for="items['{{ item }}']">{{ item | capitalize }}</label></div>
-            {% endfor %}
-          </div>
-          <div x-init="$watch( 'items', value => recipe = recipeBook(value) )" class="p-6 content-center"><p><strong class="text-xl" x-text="recipe[0]"></strong><br><span x-text="recipe[1]"></span></div>
+        <div>
+          <h2 class="text-xl"><strong>About the lookup</strong></h2>
+          <p>
+            In Kipukas, you can craft recipes from base items. This page
+            details all the recipes for the first 5 item combinations in the founder's decks.
+            Just select the items that you want to craft and a recipe will appear! We made this 
+            page to showcase the game mechanic, particularly how flexible it behaves. For competition purposes,
+            these recipes will always be valid to use. As the game matures, we plan on giving out recipes 
+            with each order. These will be kept in each player's personal recipe book and they will only
+            be allowed to play recipes from within their books for competitive play.
+          </p>
         </div>
       </div>
     </div>
