Balance cards remove custom service worker

--- a/_posts/2023-03-13-tejas_curious_mech.html
+++ b/_posts/2023-03-13-tejas_curious_mech.html
@@ -16,9 +16,9 @@ sprockets here, lighter rod there, auxiliary power in case of failure all around
 In spite or because of his categorical engineering knowledge, he often stumps himself
 and runs around in pieces for days, even sometimes weeks!"
 play_style: "An expert engineer, Tejas heals one keal means per turn for all
-Mechanical, Algorithmic, or Entropic archetypal gene souls in the same territory. If Tejas does not fix anything this turn
-he becomes bored and breaks himself. Tejas can fix himself if he does not fix anything
-next turn. When broken, Tajas is downed. Tajas breaks or fixes himself at the start of the cycle."
+Mechanical, Algorithmic, or Entropic archetypal gene souls in the same uncontended territory. If Tejas does not perform any actions this turn
+he becomes bored and breaks himself. When broken Tajas, must fix himself before moving or fixing other souls.
+Tajas breaks or fixes himself at the start of the cycle."
 brawl_sequence: WWpl
 keal_means:
   - "Hydraulic Punch"
