adjust to kipukas about articles

--- a/404.html
+++ b/404.html
@@ -1,6 +1,5 @@
 ---
 layout: Species
-permalink: /404.html
 title: "404 Glitch"
 tags: lost found
 variation: "Species"
@@ -31,9 +30,9 @@ habitat: "The cloud"
 keal_means:
   - "Digital lost and found:"
   - "Glitch"
-injury_tolerance: "<br>Can't touch this... Remove with a card capable of removing digital terrains"
+injury_tolerance: 0
 die: D6
 promotion: "Psst...sst... If you drop my name in the comments of your next order Kipukas
-will ship me to you free!"
+will ship me to you free with your next order!"
 promotion_conditions: "Limit 1 per customer."
 ---
