--- a/fourohfour.html
+++ b/fourohfour.html
@@ -32,7 +32,7 @@ habitat: "The cloud"
 keal_means:
   - "Digital lost and found:"
   - "Glitch"
-injury_tolerance: "<br>Can't touch this... Remove with a card capable of removing digital terrains"
+injury_tolerance: 0
 die: D6
 promotion: ""
 promotion_conditions: ""
